<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/grey"
        android:orientation="vertical"
        android:paddingTop="60dp">

        <LinearLayout
            android:id="@+id/user_info_collect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:visibility="visible"
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="gone"
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="gone"
                android:id="@+id/input_layout_tele"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_tele"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/hint_tele" />
            </android.support.design.widget.TextInputLayout>

            <ListView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:visibility="gone"
                android:id="@+id/listVilles"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:divider="#FFF"
                android:listSelector="#FFF"
                android:dividerHeight="1dp"
                tools:context=".MainActivity">
            </ListView>

            <Button android:id="@+id/btn_next"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_next"
                android:background="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/click_signUp_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="gone"
                android:text="@string/click_signUp_message"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Loading_area"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading_start"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="#FFF"
            android:layout_marginTop="150dp" />

        <io.github.yuweiguocn.lib.squareloading.SquareLoading
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            app:squareColor="@color/colorAccent"
            app:squareSize="12dp"
            app:squareCorner="2dp"
            app:dividerSize="2dp"
            app:xCount="4"
            app:yCount="3"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SaveDone"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_done"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="#009911"
            android:layout_marginTop="150dp" />

        <Button android:id="@+id/btn_signup"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>


    <com.google.android.gms.ads.NativeExpressAdView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_native"
        android:layout_marginTop="350dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="@string/native_ad_unit_id"
        ads:adSize="FULL_WIDTHx132">
    </com.google.android.gms.ads.NativeExpressAdView>

    <RelativeLayout
        android:id="@+id/adMobView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_alignParentBottom="true"/>

</android.support.design.widget.CoordinatorLayout>
